# llm.jax

./: README.md  pyproject.toml
.github/workflows/: ci.yml
notebooks/: llm.jax.ipynb
src/llm/: config.py  data.py  evaluator.py  inference.py  inferencer.py  model.py  train.py  trainer.py
src/llm.jax/: data.py
tests/: test_data.py  test_evaluator.py  test_inference.py  test_inferencer.py  test_model.py  test_trainer.py
