[project]
name = "llm-jax"
version = "0.1.0"
description = "A JAX variant of llm.c"
authors = [
    {name = "Jing Ai",email = "jingairpi@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[tool.poetry]
packages = [{include = "llm", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
jax = "^0.4.23"
jaxlib = "^0.4.23"
flax = "^0.7.0"
optax = "^0.1.6"
numpy = "^1.22"
pytest = "^7.0.0"

[tool.poetry.group.dev.dependencies]
black = "^22.1.0"
pytest = "^7.0.0"
pre-commit = "^2.19.0"
isort = "^6.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
